# DeskTodo

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/ui-baseline/: phase-1-report.md  phase-2-token-report.md
src/: App.test.tsx  App.tsx  App.windowLifecycle.test.tsx  appIconAssets.test.ts  global.d.ts  main.tsx  tauriWindowConfig.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.test.tsx  AppShell.tsx  CalendarPopover.tsx  CustomThemeEditor.tsx  DailyHistoryList.test.tsx  DailyHistoryList.tsx  DataTransferSection.test.tsx  DataTransferSection.tsx  DateNavigator.test.tsx  DateNavigator.tsx  DeadlineMeta.test.tsx  DeadlineMeta.tsx  DialogHeader.test.tsx  DialogHeader.tsx  EmptyState.tsx  Header.test.tsx  Header.tsx  HistoryDeleteDialog.test.tsx  HistoryDeleteDialog.tsx  QuickAddInput.test.tsx  QuickAddInput.tsx  RecurringDeleteDialog.test.tsx  RecurringDeleteDialog.tsx  ScheduleControl.test.tsx  ScheduleControl.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  TaskItem.tsx  TaskList.test.tsx  TaskList.tsx  TaskSearchDialog.test.tsx  TaskSearchDialog.tsx  UndoToast.test.tsx  UndoToast.tsx  WindowControls.test.tsx  WindowControls.tsx  WindowLayerControl.test.tsx  WindowLayerControl.tsx  taskSorting.test.ts  taskSorting.ts
src/domain/: dailyViewSelectors.test.ts  dailyViewSelectors.ts  deadline.test.ts  deadline.ts  historyDeletion.test.ts  historyDeletion.ts  recurrence.test.ts  recurrence.ts  taskSearch.test.ts  taskSearch.ts  todoOrdering.ts  todoReducer.test.ts  todoReducer.ts  todoSelectors.test.ts  todoSelectors.ts  todoTypes.ts
src/hooks/: useDeadlineClock.test.tsx  useDeadlineClock.ts  useLocalDay.ts
src/persistence/: index.ts  (+12 more)
(+33 files in other folders)
