[package]
name = "desktop-todo"
version = "0.1.0"
description = "DeskTodo desktop widget"
authors = ["DeskTodo"]
edition = "2021"

[lib]
name = "desktop_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
