[package]
name = "desktop-todo"
version = "0.2.0"
description = "DeskTodo desktop widget"
authors = ["star0628"]
license = "MIT"
repository = "https://github.com/star0628/DeskTodo"
homepage = "https://github.com/star0628/DeskTodo"
edition = "2021"

[lib]
name = "desktop_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
