[package]
name = "desktop-todo"
version = "0.4.0"
description = "DeskTodo desktop widget"
authors = ["star0628"]
license = "MIT"
repository = "https://github.com/star0628/DeskTodo"
homepage = "https://github.com/star0628/DeskTodo"
edition = "2021"

[lib]
name = "desktop_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
